# the_weather_crew

./: .gitignore  Dockerfile  NOTES.md  README.md  objective.md  pyproject.toml  report.md  requirements.txt
src/weather/: crew.py
src/weather/api/: _logging.py  errors.py  main.py  security.py
src/weather/crew/: flow.py  mcp_client.py  parser.py  tasks.py
src/weather/mcp_weather/: cache.py  provider.py  server.py
tests/: test_api_e2e.py  test_flow.py  test_mcp_client.py  test_parser.py
